fix: sidebar overflow style

--- a/packages/secretnote-sf/src/recover/layout/index.less
+++ b/packages/secretnote-sf/src/recover/layout/index.less
@@ -64,16 +64,12 @@
 }
 
 .secretnote-sidebar {
-  position: relative;
-  overflow: hidden auto;
   width: 100%;
   height: 100%;
   border-right: 1px solid var(--mana-secretnote-divider-color);
   background-color: var(--mana-secretnote-sidebar-background);
 
   .statusbar {
-    position: absolute;
-    bottom: 150px;
     width: 100%;
     border-top: 1px solid var(--mana-secretnote-divider-color);
   }
